httproute.yaml
# httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-http-route
  namespace: argocd
spec:
  parentRefs:
  - name: argocd-gateway # 바로 위에서 만든 Gateway 이름
  hostnames:
  - "argocd.mydomain.com" # 실제 사용하는 도메인
  rules:
  - backendRefs:
    - name: argo-cd-argocd-server
      port: 80 # Service의 포트
